2001-10-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.{cc,h},ucinternal.cc:  terminate() added to
	remove existing scripts for an object if 'no_halt' isn't set.

2001-10-03  Jeff Freedman  <jeff@amy.nerble.net>

	* paths.cc (Actor_pathfinder_client): Handles 'dist' option now.
	* actors.cc (follow()):  Another attempt to avoid hanging/slowdowns.

	* actors.cc,monstinf.cc:  poison_safe detected.
	* audio/Audio.cc (Audio): Disable audio if device can't be opened.

	* gamewin.cc: You can always read a sign.
	* drag.cc: Fixed another world-wrapping crash.
	* ucsched.cc:  Only activate 3 kinds of eggs.

2001-10-02  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc (public): Handle more SI books.

2001-10-01  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,etc:  Separate dead_party list for dead
	companions.

2001-09-30  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Offsets in obj_sprite_effect() are negated.
	* usecode/bgintrinsics.h, etc: npc_sprite_effect() becomes
	obj_sprite_effect().
	* readnpcs.cc: Skip all the extra trappers.
	* actors.cc: Actor::is_blocked() is used for all, not just monsters.

2001-09-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: try harder to avoid putting objects in the actor-container
	itself
	* contain.cc: allow putting a bag in a bag if dont_check is set
	* ucdisasm.cc: cosmetic fix with display of backward jumps
	* tools/Makefile.am: fixed make warning
	* Paperdoll_gump.cc: option for showing non-readied objects
	* exult_constants.h: made the CERR/COUT macro's 'if'-safe
	
2001-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/siintrinsics.cc: Reduce_health added (x87).
	* actors.cc: Use Avatar's real height.
	* usecode/ucinternal.cc (Usecode_internal): Fixed ARRC bug in
	cases where one or more values are empty arrays.

2001-09-28  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Give fake HP's to serpent statue in SI.